@@ -90,7 +90,10 @@
 			<artifactId>opentracing-okhttp3</artifactId>
 			<version>${ot.contrib.okhttp.version}</version>
 			<exclusions>
-
+				<exclusion>
+					<groupId>com.squareup.okhttp3</groupId>
+					<artifactId>okhttp</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 
@@ -112,12 +115,33 @@
 			<groupId>io.opentracing.contrib</groupId>
 			<artifactId>opentracing-apache-httpclient</artifactId>
 			<version>0.0.1</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.httpcomponents</groupId>
+					<artifactId>httpclient</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
+
+		<!-- ES instrumentation -->
 		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpclient</artifactId>
-			<version>4.5.3</version>
-			<scope>test</scope>
+			<groupId>io.opentracing.contrib</groupId>
+			<artifactId>opentracing-elasticsearch-client</artifactId>
+			<version>0.0.1</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.logging.log4j</groupId>
+					<artifactId>log4j-core</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.elasticsearch.client</groupId>
+					<artifactId>transport</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.logging.log4j</groupId>
+					<artifactId>log4j-api</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<!-- JUnit tests -->
@@ -147,13 +171,7 @@
 			<version>3.4.2</version>
 			<scope>test</scope>
 		</dependency>
-		<!-- OkHTTP tests -->
-		<dependency>
-			<groupId>com.squareup.okhttp3</groupId>
-			<artifactId>okhttp</artifactId>
-			<version>3.6.0</version>
-			<scope>test</scope>
-		</dependency>
+
 		<!-- Jetty Servlet tests -->
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
@@ -188,6 +206,48 @@
 			<artifactId>aws-java-sdk</artifactId>
 			<version>1.11.132</version>
 			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.httpcomponents</groupId>
+					<artifactId>httpclient</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+		<!-- OkHTTP tests -->
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>3.6.0</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- Apache HTTP client tests -->
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.3</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!--Elasticsearch tests -->
+		<dependency>
+			<groupId>org.elasticsearch.client</groupId>
+			<artifactId>transport</artifactId>
+			<version>5.4.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.7</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.7</version>
+			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
@@ -208,10 +268,17 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.20</version>
 				<configuration>
-					<argLine>-javaagent:${M2_REPO}/com/datadoghq/dd-java-agent/${project.version}/dd-java-agent-${project.version}.jar</argLine>
 					<includes>
 						<include>*Test.java</include>
 					</includes>
+					<excludes>
+						<exclude>ElasticSearchInstrumentationTest.java</exclude>
+					</excludes>
+					<forkCount>3</forkCount>
+					<reuseForks>false</reuseForks>
+					<argLine>-Xmx500m -Xms500m -XX:MaxPermSize=256m
+						-javaagent:${M2_REPO}/com/datadoghq/dd-java-agent/${project.version}/dd-java-agent-${project.version}.jar</argLine>
+					<workingDirectory>target/FORK_DIRECTORY_${surefire.forkNumber}</workingDirectory>
 				</configuration>
 			</plugin>
 			<plugin>
